# CimTalent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a5c31e90d741_add_search_query_normalized_key.py  (+3 more)
backend/app/: __init__.py  config.py  dependencies.py  logging.py  main.py
backend/app/api/: errors.py  (+1 more)
backend/tests/: test_api_candidate_enrichment.py  test_api_candidates.py  test_api_job_parsing.py  test_api_jobs_crud.py  test_api_search_queries.py  test_api_search_results.py  test_browser_infrastructure.py  test_candidate_discovery_api.py  test_candidate_discovery_service.py  test_candidate_domain.py  test_candidate_enrichment_service.py  test_candidate_merge.py  test_candidate_metadata.py  test_candidate_repository.py  test_candidate_service.py  test_config.py  test_db.py  test_docker_static.py  test_enrichment_domain.py  test_enums.py  test_health.py  test_job_parser_components.py  test_job_parser_orchestrator.py  test_job_parsing_service.py  test_job_repository.py  test_job_requirement_repository.py  test_job_schemas.py  test_job_search_metadata.py  test_job_service.py  test_job_text_normalization.py  test_linkedin_fixture_pipeline.py  test_logging.py  test_manual_result_parser.py  test_matching_engine.py  test_migrations.py  test_models.py  test_profile_url_normalizer.py  test_query_generation_service.py  test_query_generator.py  test_search_query_repository.py  (+4 more)
(+216 files in other folders)
